<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 故障报修-->
    <string name="troublshooting">故障报修</string>
    <string name="tro_address">地点</string>
    <string name="tro_address_hint">请输入详细的地址（必填）</string>
    <string name="tro_dev">设备</string>
    <string name="tro_dev_hint">请输入详细的设备名称（必填）</string>
    <string name="tro_problemdescription">问题描述</string>
    <string name="tro_problemdescription_hint">请输入详细的问题（必填）</string>
    <string name="tro_submit">提交</string>
    <string name="tro_aree">同意维修</string>
    <string name="tro_fedinfo">反馈信息</string>
    <string name="tro_assign">指定处理人</string>
    <string name="tro_end_repair">已维修</string>
    <string name="net_error">网络异常，请稍后重试</string>
    <string name="data_error">获取信息失败，请重试</string>
    <string name="nodata">还没有数据哦</string>
    <string name="nodata_awaitapproval">还没有数据哦</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
</resources>