<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/main_bg"
    tools:context=".ui.AddMalfunctionActivity">
    <include
        android:id="@+id/layout_top"
        layout="@layout/core_title_back" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/addPhotos"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_height="41dp"
                    android:layout_width="50dp"
                    android:src="@mipmap/gzbx_camera"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="添加报修照片"
                    android:textSize="18sp"
                    android:textColor="#353535"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="请把损坏的物品拍摄清楚，方便维修人员鉴别与维修"
                    android:textSize="12sp"
                    android:textColor="#9c9c9c"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lin_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--<FrameLayout-->
                    <!--android:id="@+id/frame1"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="200dp"-->
                    <!--android:background="@color/white"-->
                    <!--android:layout_marginTop="10dp">-->
                    <!--<ImageView-->
                        <!--android:id="@+id/img1"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:src="@mipmap/app_tsg"-->
                        <!--android:scaleType="fitXY"/>-->
                    <!--<ImageView-->
                        <!--android:id="@+id/del1"-->
                        <!--android:layout_height="20dp"-->
                        <!--android:layout_width="20dp"-->
                        <!--android:src="@mipmap/gzbx_del"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:layout_gravity="right"/>-->
                <!--</FrameLayout>-->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addPhotos2"
                android:layout_height="44dp"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:visibility="gone">
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@mipmap/gzbx_addphotos"/>
                <TextView
                    android:id="@+id/imgsize"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="继续添加报修照片（1/3）"
                    android:textSize="18sp"
                    android:textColor="#353535"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tro_address"
                        android:textColor="@color/tro_malfunction"
                        android:textSize="16sp"/>
                    <EditText
                        android:id="@+id/tro_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tro_address_hint"
                        android:background="@null"
                        android:layout_marginLeft="20dp"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:maxLength="50"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/tro_line"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tro_dev"
                        android:textColor="@color/tro_malfunction"
                        android:textSize="16sp"/>
                    <EditText
                        android:id="@+id/tro_dev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tro_dev_hint"
                        android:background="@null"
                        android:layout_marginLeft="20dp"
                        android:textSize="12sp"
                        android:singleLine="true"
                        android:maxLength="50"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/tro_line"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="top">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tro_problemdescription"
                        android:textColor="@color/tro_malfunction"
                        android:textSize="16sp"/>
                    <EditText
                        android:id="@+id/tro_problem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tro_problemdescription_hint"
                        android:background="@null"
                        android:layout_marginLeft="20dp"
                        android:textSize="12sp"
                        android:maxLength="200"
                        android:minHeight="60dp"
                        android:gravity="top"
                        android:paddingBottom="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ok"
                android:layout_width="fill_parent"
                android:layout_height="?attr/image42"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:elevation="2dp"
                android:background="@drawable/ripple_bg"
                android:onClick="submitLiusu"
                android:gravity="center">

                <TextView
                    android:id="@+id/ok_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="提交"
                    android:textColor="@color/white"
                    android:textSize="?attr/textSize14"/>

                <com.dk.mp.core.view.DrawHookView
                    android:id="@+id/progress"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:visibility="gone">
                </com.dk.mp.core.view.DrawHookView>

                <com.dk.mp.core.view.DrawCheckMarkView
                    android:id="@+id/progress_check"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:visibility="gone">
                </com.dk.mp.core.view.DrawCheckMarkView>

                <com.dk.mp.core.view.DrawCrossMarkView
                    android:id="@+id/progress_cross"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:visibility="gone">
                </com.dk.mp.core.view.DrawCrossMarkView>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
