<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >
     <include
        android:id="@+id/layout_top"
        layout="@layout/core_title_back" />
	<android.support.v4.widget.NestedScrollView
		android:id="@+id/mScrollview"
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:layout_below="@id/layout_top">
		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical">

	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@color/white">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        <LinearLayout
	            android:layout_width="60dp"
	            android:layout_height="60dp"
	            android:gravity="center" >
	            <LinearLayout 
			       android:layout_width="40dp"
			       android:layout_height="40dp"
			       android:background="@drawable/radius"
			       android:gravity="center">
			       <TextView
			           android:id="@+id/textView1"
			           android:layout_width="match_parent"
			           android:layout_height="match_parent"
			           android:gravity="center"
			           android:text="王旭伟"
			           android:textColor="@color/white" />
			   </LinearLayout>
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical" >
	            <TextView
	                android:id="@+id/textView2"
		   		    android:layout_width="match_parent"
		   		    android:layout_height="35dp"
		   		    android:text="王旭伟"
		   		    android:textColor="@color/black"
		   		    android:textSize="15sp"
		   		    android:gravity="fill_vertical"/>
		   		<TextView
		   		    android:id="@+id/status"
		   		    android:layout_width="match_parent"
		   		    android:layout_height="25dp"
		   		    android:text="未处理"
		   		    android:textColor="@color/tro_status"
		   		    android:textSize="12sp"/>
	        </LinearLayout>
	    </LinearLayout>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="0.5dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:background="@color/tro_line"/>
    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:layout_marginTop="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">
		   		<LinearLayout
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:orientation="horizontal">
				       <TextView
			   		    android:layout_width="wrap_content"
			   		    android:layout_height="wrap_content"
			   		    android:text="地        点："
			   		    android:textColor="@color/tro_status"
			   		    android:textSize="12sp"
			   		    android:gravity="fill_vertical"/>
				       <TextView
			   		    android:id="@+id/address"
			   		    android:layout_width="match_parent"
			   		    android:layout_height="wrap_content"
			   		    android:text=""
			   		    android:textColor="@color/tro_malfunction"
			   		    android:textSize="12sp"
			   		    android:gravity="fill_vertical"
			   		    android:lineSpacingExtra="2dp"/>
			    </LinearLayout>
			    <LinearLayout
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:orientation="horizontal"
		   		    android:layout_marginTop="2dp">
				       <TextView
			   		    android:layout_width="wrap_content"
			   		    android:layout_height="wrap_content"
			   		    android:text="设        备："
			   		    android:textColor="@color/tro_status"
			   		    android:textSize="12sp"/>
				       <TextView
			   		    android:id="@+id/device"
			   		    android:layout_width="match_parent"
			   		    android:layout_height="wrap_content"
			   		    android:text="空调"
			   		    android:textColor="@color/tro_malfunction"
			   		    android:textSize="12sp"
			   		    android:lineSpacingExtra="2dp"/>
		   		</LinearLayout>
		   		<LinearLayout
		   		    android:layout_width="match_parent"
		   		    android:layout_height="wrap_content"
		   		    android:orientation="horizontal">
				       <TextView
			   		    android:layout_width="wrap_content"
			   		    android:layout_height="wrap_content"
			   		    android:text="问题描述："
			   		    android:textColor="@color/tro_status"
			   		    android:textSize="12sp"/>
				       <TextView
			   		    android:id="@+id/des"
			   		    android:layout_width="match_parent"
			   		    android:layout_height="wrap_content"
			   		    android:text="空调无法打开空调无法打开空调无法打开空调无法打开空调无法打开空调无法打开"
			   		    android:textColor="@color/tro_malfunction"
			   		    android:textSize="12sp"
			   		    android:lineSpacingExtra="2dp"/>
		   		</LinearLayout>
    	</LinearLayout>
		<LinearLayout
			android:id="@+id/bximgs"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginBottom="10dp">
			<!--<ImageView-->
				<!--android:layout_height="200dp"-->
				<!--android:layout_width="match_parent"-->
				<!--android:src="@mipmap/app_tsg"-->
				<!--android:scaleType="fitXY"/>-->
		</LinearLayout>
    </LinearLayout>

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
		android:background="@color/main_bg"
		android:layout_marginBottom="42dp" >

				<!--<include
				    android:id="@+id/listview"
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    layout="@layout/core_listview"
				    android:divider="@null" />-->
		<com.dk.mp.gzbx.view.MyListView
			style="@style/mylist"
			android:id="@+id/listview"
			android:divider="@null"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
    	
    </LinearLayout>

		</LinearLayout>
	</android.support.v4.widget.NestedScrollView>

	<LinearLayout
		android:id="@+id/bottom_view"
		android:layout_alignParentBottom="true"
		android:layout_height="42dp"
		android:layout_width="match_parent"
		android:background="@color/white"
		android:orientation="horizontal"
		android:visibility="gone">
		<LinearLayout
			android:id="@+id/bottom_left"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center">
			<ImageView
				android:id="@+id/imageView1"
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:src="@drawable/button_repair" />
			<TextView
				android:id="@+id/tro_end_repair"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dip"
				android:text="@string/tro_aree"
				android:textSize="12sp"
				android:textColor="@color/tro_bottom_color"/>
		</LinearLayout>
		<View
			android:layout_height="match_parent"
			android:background="@color/tro_line"
			android:layout_width="0.5dp"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"/>
		<LinearLayout
			android:id="@+id/bottom_right"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center">
			<ImageView
				android:id="@+id/imageView2"
				android:layout_width="12dp"
				android:layout_height="12dp"
				android:src="@drawable/button_fedback" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dip"
				android:text="@string/tro_fedinfo"
				android:textSize="12sp"
				android:textColor="@color/tro_bottom_color"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/bottom_view2"
		android:layout_alignParentBottom="true"
		android:layout_height="42dp"
		android:layout_width="match_parent"
		android:background="@color/white"
		android:orientation="horizontal"
		android:gravity="center"
		android:visibility="gone">
		<ImageView
			android:id="@+id/imageView3"
			android:layout_width="12dp"
			android:layout_height="12dp"
			android:src="@drawable/button_assign" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dip"
			android:text="@string/tro_assign"
			android:textSize="12sp"
			android:textColor="@color/tro_bottom_color"/>
	</LinearLayout>
</RelativeLayout>